# klomena-intelligent-automation

./: README.md  cursor_prompt.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/models/: __init__.py  celebration_graph.py  vendor.py
backend/app/repositories/: __init__.py  graph_repository.py  vendor_repository.py
backend/app/routers/: __init__.py  addons.py  intent.py  plans.py  vendors.py
backend/app/schemas/: __init__.py  addon.py  intent.py  plan.py
backend/app/seed/: __init__.py  seed.py
backend/app/seed/data/: graph_edges.json  vendors.json
backend/app/services/: __init__.py  addon_recommender.py  intent_parser.py  plan_search.py
backend/infrastructure/migrations/: 0001_init.sql
